--- a/MultiThreading/02_Thread_生命周期管理/02_Thread_生命周期管理.csproj
+++ b/MultiThreading/02_Thread_生命周期管理/02_Thread_生命周期管理.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{283A9073-83FE-4707-A8D0-1605210F6AD7}</ProjectGuid>
+    <ProjectGuid>{71DC3763-8C25-484D-BEC1-F76040686BA6}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>_02_Thread_生命周期管理</RootNamespace>
     <AssemblyName>02_Thread_生命周期管理</AssemblyName>
@@ -46,16 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Main.Designer.cs">
+      <DependentUpon>Main.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Main.resx">
+      <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
